--- a/photopicker/src/main/res/values/strings.xml
+++ b/photopicker/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="photo">Photo</string>
     <string name="photo_selected">1 photo selected</string>
     <string name="photos_selected">%1$d photos selected</string>
-    <string name="search">Search free photos</string>
+    <string name="search">Search Unsplash photos</string>
     <string name="unsplash">Unsplash</string>
 </resources>
