--- a/photopicker/src/main/res/values/strings.xml
+++ b/photopicker/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="photos_selected">%1$d photos selected</string>
     <string name="search">Search Unsplash photos</string>
     <string name="unsplash">Unsplash</string>
+    <string name="transitionName">PhotoTransition</string>
 </resources>
